--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Background Image Container con efecto FADE -->
         <div class="absolute inset-0 z-0">
             <!-- PLACEHOLDER IMAGEN HERO (La que generaste) -->
-            <img src="https://via.placeholder.com/1920x1080/111/fff?text=Hero+Image+Sfumato+Cosmos" alt="Space Background" class="w-full h-full object-cover opacity-80">
+            <img src="hero.png" alt="Space Background" class="w-full h-full object-cover opacity-80">
             
             <!-- Mascaras para sfumare los bordes al negro -->
             <div class="absolute inset-0 bg-gradient-to-r from-space-900 via-space-900/50 to-transparent w-full h-full"></div>
