--- a/articles.html
+++ b/articles.html
@@ -86,7 +86,7 @@
             <div class="absolute inset-0 bg-gradient-to-t from-space-900 to-transparent"></div>
         </div>
         <div class="relative z-10 max-w-7xl mx-auto px-4 text-center">
-            <h1 id="page-title" class="text-4xl md:text-5xl font-extrabold text-white mb-4">Blog & Noticias</h1>
+            <h1 id="page-title" class="text-4xl md:text-5xl font-extrabold text-white mb-4">Noticias</h1>
             <p id="page-subtitle" class="text-xl text-gray-400">Explora el universo de actualizaciones del proyecto.</p>
         </div>
     </div>
