--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <!-- Logos placeholder -->
                 <img src="assets/logo-MIM.png" class="h-10">
                 <img src="assets/logo-ESO.jpg" class="h-10">
-                <img src="assets/logo-UC.jpg" class="h-10">
+                <img src="assets/logo-UC.png" class="h-10">
                 <img src="assets/logo-DCC.jpg" class="h-10">
                 <img src="assets/logo-Dilab.png" class="h-10">
             </div>
