--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
             <p class="text-gray-500 text-sm uppercase tracking-widest mb-8">Respaldado por</p>
             <div class="flex flex-wrap justify-center gap-12 items-center opacity-60 grayscale hover:grayscale-0 hover:opacity-100 transition duration-500">
                 <!-- Logos placeholder -->
-                <img src="assets/logo-MIM.png" class="h-10">
-                <img src="assets/logo-ESO.jpg" class="h-10">
-                <img src="assets/logo-UC.png" class="h-10">
-                <img src="assets/logo-DCC.jpg" class="h-10">
-                <img src="assets/logo-Dilab.png" class="h-10">
+                <img src="assets/logo-MIM.webp" class="h-10">
+                <img src="assets/logo-ESO.webp" class="h-10">
+                <img src="assets/logo-UC.webp" class="h-10">
+                <img src="assets/logo-DCC.webp" class="h-10">
+                <img src="assets/logo-Dilab.webp" class="h-10">
             </div>
         </div>
     </section>
