--- a/index.html
+++ b/index.html
@@ -314,19 +314,16 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label class="block text-sm font-medium text-gray-400 mb-1">Nombre</label>
-                            <!-- TODO: Sostituisci name="entry.XXXXXX" con l'ID reale di Google Form per il NOME -->
-                            <input type="text" name="entry.123456" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="Tu nombre">
+                            <input type="text" name="entry.952217186" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="Tu nombre">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-400 mb-1">Correo Electrónico</label>
-                            <!-- TODO: Sostituisci name="entry.YYYYYY" con l'ID reale di Google Form per EMAIL -->
-                            <input type="email" name="entry.789012" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="correo@ejemplo.com">
+                            <input type="email" name="entry.1988284086" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="correo@ejemplo.com">
                         </div>
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Mensaje</label>
-                        <!-- TODO: Sostituisci name="entry.ZZZZZZ" con l'ID reale di Google Form per MESSAGGIO -->
-                        <textarea name="entry.345678" rows="4" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="¿En qué podemos ayudarte?"></textarea>
+                        <textarea name="entry.1929946945" rows="4" required class="w-full bg-space-800 border border-white/10 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-neon-cyan transition" placeholder="¿En qué podemos ayudarte?"></textarea>
                     </div>
 
                     <button type="submit" class="w-full bg-gradient-to-r from-neon-cyan to-blue-500 hover:from-cyan-400 hover:to-blue-400 text-black font-bold py-4 rounded-lg transition transform hover:scale-[1.01] flex items-center justify-center">
@@ -433,23 +430,19 @@
                 <form id="museum-contact-form" class="space-y-4">
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Nombre Completo</label>
-                        <!-- TODO: ID Google Form -->
-                        <input type="text" name="entry.111111" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
+                        <input type="text" name="entry.952217186" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Correo Institucional</label>
-                        <!-- TODO: ID Google Form -->
-                        <input type="email" name="entry.222222" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
+                        <input type="email" name="entry.1988284086" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Institución</label>
-                        <!-- TODO: ID Google Form -->
-                        <input type="text" name="entry.333333" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
+                        <input type="text" name="entry.266045146" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-400 mb-1">Mensaje</label>
-                        <!-- TODO: ID Google Form -->
-                        <textarea name="entry.444444" rows="3" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition"></textarea>
+                        <textarea name="entry.1929946945" rows="3" required class="w-full bg-black/50 border border-white/10 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-purple-500 transition"></textarea>
                     </div>
 
                     <button type="submit" class="w-full bg-white text-black font-bold py-3 rounded-lg hover:bg-gray-200 transition mt-4 flex items-center justify-center">
@@ -574,8 +567,7 @@
         }
 
         // Configurar Formulario Principal
-        // REEMPLAZAR 'NOMBREFORM' CON LA URL DE ACCIÓN DE GOOGLE FORM (ej: https://docs.google.com/forms/u/0/d/e/.../formResponse)
-        const GOOGLE_FORM_URL = "https://docs.google.com/forms/u/0/d/e/TU_ID_DE_GOOGLE_FORM/formResponse";
+        const GOOGLE_FORM_URL = "https://docs.google.com/forms/u/0/d/1XYRpn6LxSmZ79nBlTwneSAWAj7mx0XDfJ6g4XkfpBbE/formResponse";
         
         setupGoogleForm("main-contact-form", "main-form-confirmation", "main-btn-text", "main-btn-loader", GOOGLE_FORM_URL);
         
