--- a/index.html
+++ b/index.html
@@ -395,14 +395,26 @@
                 </div>
                 <div class="grid md:grid-cols-2 gap-6">
                     <!-- Option A -->
-                    <div class="bg-black/40 p-6 rounded-xl border border-white/5 hover:border-neon-cyan transition text-center cursor-pointer" onclick="alert('Conectando a App Web...')">
+                    <div class="bg-black/40 p-6 rounded-xl border border-white/5 hover:border-neon-cyan transition text-center cursor-pointer">
                         <div class="text-4xl mb-4">🏠</div>
                         <h4 class="text-xl font-bold text-white">Versión Hogar</h4>
+                        <button class="w-full bg-neon-cyan hover:bg-cyan-300 text-black font-bold py-3 px-4 rounded-lg mb-4 transition" onclick="alert('Conectando a App Web...')">
+                            CONECTAR
+                        </button>
+                        <a href="#modelos" onclick="closeAppModal()" class="text-xs text-gray-500 underline hover:text-neon-cyan block">
+                            ¿No tienes telescopio? <br>Mira cómo construirlo aquí
+                        </a>
                     </div>
                     <!-- Option B -->
-                    <div class="bg-black/40 p-6 rounded-xl border border-white/5 hover:border-purple-500 transition text-center cursor-pointer" onclick="alert('Conectando a App Web...')">
+                    <div class="bg-black/40 p-6 rounded-xl border border-white/5 hover:border-purple-500 transition text-center cursor-pointer">
                         <div class="text-4xl mb-4">🏫</div>
                         <h4 class="text-xl font-bold text-white">Versión Colegio</h4>
+                        <button class="w-full bg-purple-600 hover:bg-purple-500 text-white font-bold py-3 px-4 rounded-lg mb-4 transition" onclick="alert('Conectando a App Web...')">
+                            CONECTAR
+                        </button>
+                        <a href="#modelos" onclick="closeAppModal()" class="text-xs text-gray-500 underline hover:text-purple-400 block">
+                            ¿Tu colegio no tiene el kit? <br>Descarga los planos aquí
+                        </a>
                     </div>
                 </div>
                 <button onclick="closeAppModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white">✕</button>
