--- a/articles.html
+++ b/articles.html
@@ -123,6 +123,9 @@
                 </a>
             </div>
 
+            <!-- Fecha de publicación del artículo -->
+            <div id="detail-date" class="text-neon-cyan/80 font-medium tracking-widest text-sm mb-2 uppercase"></div>
+
             <!-- Título del Artículo -->
             <h1 id="detail-title" class="text-4xl md:text-5xl font-extrabold text-white mb-10 leading-tight"></h1>
 
@@ -192,8 +195,16 @@
             function loadArticlesList(articles) {
                 listContainer.classList.remove('hidden');
                 
-                // Invertir orden (más nuevo primero)
-                const reversed = articles.reverse();
+                /* ORDENADO SEGÚN JSON */
+                // // Invertir orden (más nuevo primero)
+                // const reversed = articles.reverse();
+
+                /* ORDENADO SEGÚN FECHA */
+                const reversed = articles.sort((a, b) => {
+                        const dateA = new Date(a.publishDate.split('/').reverse().join('-'));
+                        const dateB = new Date(b.publishDate.split('/').reverse().join('-'));
+                        return dateB - dateA; // Descendente
+                    });
 
                 if (reversed.length === 0) {
                     gridContainer.innerHTML = '<p class="text-gray-400 col-span-full text-center">No hay artículos disponibles.</p>';
@@ -215,6 +226,7 @@
                             </div>
                             <div class="p-6 flex-grow flex flex-col justify-between">
                                 <div>
+                                    <span class="text-xs text-neon-cyan/60 font-bold uppercase tracking-tighter mb-2 block">${article.publishDate || ''}</span>
                                     <h3 class="text-xl font-bold text-white mb-2 group-hover:text-neon-cyan transition">${article.title}</h3>
                                     <p class="text-gray-400 text-sm line-clamp-3 mb-4">Haz clic para leer la historia completa y ver la galería de imágenes.</p>
                                 </div>
@@ -248,6 +260,7 @@
 
                 // 1. Set Title
                 document.getElementById('detail-title').innerText = article.title;
+                document.getElementById('detail-date').innerText = article.publishDate || '';
                 document.title = article.title + " | Ventana Celeste";
 
                 // 2. Set Gallery (Si existe en el JSON)
