members default icon

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                  <!-- Member 1 -->
                 <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-neon-cyan transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=AB" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Alessio Bellino</h4>
                     <p class="text-xs text-neon-cyan uppercase mt-1">Founder & Vision</p>
@@ -249,7 +249,7 @@
                  <!-- Member 2 -->
                  <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-neon-cyan transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=FM" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Francisco Maureira</h4>
                     <p class="text-xs text-neon-cyan uppercase mt-1">Head of Phygital</p>
@@ -257,7 +257,7 @@
                  <!-- Member 3 -->
                  <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-neon-cyan transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=GB" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Gonzalo Barrueto</h4>
                     <p class="text-xs text-neon-cyan uppercase mt-1">Simulation Eng.</p>
@@ -265,7 +265,7 @@
                  <!-- Member 4 -->
                  <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-neon-cyan transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=ES" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Eduardo Sepulveda</h4>
                     <p class="text-xs text-neon-cyan uppercase mt-1">Lead Developer</p>
@@ -273,7 +273,7 @@
                  <!-- Member 5 -->
                  <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-purple-500 transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=SV" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Sergio Vásquez</h4>
                     <p class="text-xs text-purple-400 uppercase mt-1">Scientific Advisor</p>
@@ -281,7 +281,7 @@
                  <!-- Member 6 -->
                  <div class="group">
                     <div class="w-24 h-24 mx-auto bg-gray-700 rounded-full mb-4 overflow-hidden ring-2 ring-transparent group-hover:ring-purple-500 transition">
-                        <img src="https://via.placeholder.com/150/333/fff?text=LV" class="w-full h-full object-cover">
+                        <img src="assets/miembros/profile-default-icon.webp" class="w-full h-full object-cover">
                     </div>
                     <h4 class="font-bold text-white">Leonardo Vanzi</h4>
                     <p class="text-xs text-purple-400 uppercase mt-1">Scientific Sup.</p>
