--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <!-- Home Version -->
                 <div class="group relative bg-space-800 rounded-2xl overflow-hidden border border-white/10 hover:border-neon-cyan transition-all">
                     <div class="h-64 overflow-hidden">
-                         <img src="https://via.placeholder.com/800x600/222/fff?text=Modelo+Hogar+DIY" alt="Home Version" class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
+                         <img src="assets/home-edition.jpeg" alt="Home Version" class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
                     </div>
                     <div class="p-8">
                         <h3 class="text-2xl font-bold mb-2">Home Edition</h3>
@@ -203,7 +203,7 @@
                 <!-- School Version -->
                 <div class="group relative bg-space-800 rounded-2xl overflow-hidden border border-white/10 hover:border-purple-500 transition-all">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://via.placeholder.com/800x600/222/fff?text=Modelo+Escuela+Kit" alt="School Version" class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
+                        <img src="assets/school-edition.jpeg" alt="School Version" class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
                     </div>
                     <div class="p-8">
                         <h3 class="text-2xl font-bold mb-2">School Edition</h3>
@@ -216,7 +216,7 @@
             <!-- SECCION MUSEO -->
             <div class="relative rounded-3xl overflow-hidden border border-white/10">
                 <div class="absolute inset-0">
-                    <img src="https://via.placeholder.com/1600x600/000/333?text=Instalacion+Museografica" class="w-full h-full object-cover opacity-40">
+                    <img src="assets/museo.jpeg" class="w-full h-full object-cover opacity-40">
                     <div class="absolute inset-0 bg-gradient-to-r from-black via-black/80 to-transparent"></div>
                 </div>
                 <div class="relative p-12 md:p-16 md:w-2/3">
