--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         <div class="text-4xl mb-4">🏠</div>
                         <h4 class="text-xl font-bold text-white">Versión Hogar</h4>
                         <button class="w-full bg-neon-cyan hover:bg-cyan-300 text-black font-bold py-3 px-4 rounded-lg mb-4 transition" 
-                                onclick="window.open('https://telescope.alessiobellino.com', '_blank')">
+                                onclick="window.open('https://app.ventanaceleste.com', '_blank')">
                             CONECTAR
                         </button>
                         <a href="#modelos" onclick="closeAppModal()" class="text-xs text-gray-500 underline hover:text-neon-cyan block">
